--- a/client/index.html
+++ b/client/index.html
@@ -105,6 +105,7 @@
                                 type="text"
                                 id="name"
                                 placeholder="Enter Name"
+                                class="form-input"
                             />
                         </div>
                         <div>
@@ -113,6 +114,7 @@
                                 type="email"
                                 id="email"
                                 placeholder="Enter Email"
+                                class="form-input"
                             />
                         </div>
                         <div>
@@ -121,6 +123,7 @@
                                 type="password"
                                 id="password"
                                 placeholder="Enter Password"
+                                class="form-input"
                             />
                         </div>
                         <div>
@@ -129,6 +132,7 @@
                                 type="password"
                                 id="password2"
                                 placeholder="Confirm Password"
+                                class="form-input"
                             />
                         </div>
                         <input
