--- a/client/index.html
+++ b/client/index.html
@@ -21,10 +21,11 @@
                 />
             </div>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#">Hem</a></li>
+                <li><a href="#">Om Mig</a></li>
+                <li><a href="#">Projekt</a></li>
                 <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact Me</a></li>
+                <li><a href="#">Kontakt</a></li>
             </ul>
         </nav>
 
@@ -33,14 +34,9 @@
                 <i class="fa fa-bars fa-2x"></i>
             </button>
 
-            <h1>My Page</h1>
+            <h1>Min Sida</h1>
 
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut,
-                reprehenderit?
-            </p>
-
-            <button class="cta-btn" id="open">Sign Up</button>
+            <!-- <button class="cta-btn" id="open">Sign Up</button> -->
         </header>
 
         <div class="container">
