added remaining html pages

--- a/client/about.html
+++ b/client/about.html
@@ -10,7 +10,7 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="/client/css/style.css" />
-        <title>Utbildningar</title>
+        <title>Om Mig</title>
     </head>
     <body>
         <nav>
@@ -35,13 +35,32 @@
                 <i class="fa fa-bars fa-2x"></i>
             </button>
 
-            <h1>Projekt</h1>
+            <h1>Om Mig</h1>
         </header>
 
         <div class="container">
-            <h1>
-                Kommer strax
-            </h1>
+            <h2>Vem är jag?</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+                cum, blanditiis officiis iusto soluta, corporis laudantium nulla
+                numquam voluptates labore maxime, aliquid qui reiciendis quis
+                odio ipsum dolorem? Officia, et?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+                veritatis ex fugiat quasi molestias aperiam, facilis nostrum
+                autem placeat inventore.
+            </p>
+
+            <h2>Annan Information</h2>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Explicabo vero, officiis tempore laborum doloribus porro
+                inventore? Nihil mollitia, assumenda odio ea, perferendis
+                reprehenderit aspernatur unde id corporis incidunt placeat
+                sapiente, soluta suscipit ipsa perspiciatis autem eius quae
+                quaerat expedita quasi.
+            </p>
         </div>
 
         <script src="/client/js/script.js"></script>
