--- a/client/index.html
+++ b/client/index.html
@@ -21,11 +21,12 @@
                 />
             </div>
             <ul>
-                <li><a href="#">Hem</a></li>
-                <li><a href="#">Om Mig</a></li>
-                <li><a href="#">Projekt</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="/client/index.html">Startsida</a></li>
+                <li><a href="/client/about.html">Om Mig</a></li>
+                <li><a href="/client/projects.html">Projekt</a></li>
+                <li><a href="/client/education.html">Utbildning</a></li>
+                <li><a href="/client/work.html">Tidigare Jobb</a></li>
+                <li><a href="/client/contact.html">Kontakt</a></li>
             </ul>
         </nav>
 
