--- a/client/contact.html
+++ b/client/contact.html
@@ -39,7 +39,7 @@
         </header>
 
         <div class="container">
-            <h2>Vem är jag?</h2>
+            <h2>Kontaktuppgifter</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
                 cum, blanditiis officiis iusto soluta, corporis laudantium nulla
@@ -50,14 +50,6 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
                 veritatis ex fugiat quasi molestias aperiam, facilis nostrum
                 autem placeat inventore.
-            </p>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Explicabo vero, officiis tempore laborum doloribus porro
-                inventore? Nihil mollitia, assumenda odio ea, perferendis
-                reprehenderit aspernatur unde id corporis incidunt placeat
-                sapiente, soluta suscipit ipsa perspiciatis autem eius quae
-                quaerat expedita quasi.
             </p>
         </div>
 
